// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BattleDetailView > スナップショット - バトル詳細画面 1`] = `
"
  ERROR  Cannot read properties of undefined (reading 'map')

 src/app/components/BattleDetailView.tsx:347:6

 344:
 345:   // フィルタリングされたイベント（IDを付与）
 346:   const filteredEventsWithId = battleLog
 347:     .map((event, index) => ({ event, id: getEventId(event, index) }))
 348:     .filter(({ event }) => {
 349:       switch (logFilter) {
 350:         case "all":

 - BattleDetailView (src/app/components/BattleDetailView.tsx:347:6)
 -renderWithHoo (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconci
  s            ler/cjs/react-reconciler.development.js:6659:18)
 -mountIndeterminateCom (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react
  onent                -reconciler/cjs/react-reconciler.development.js:11276:13)
 -beginWor (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconciler/c
          js/react-reconciler.development.js:12799:16)
 -beginWork$ (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconciler
            /cjs/react-reconciler.development.js:19608:14)
 -performUnitOfW (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconc
  rk            iler/cjs/react-reconciler.development.js:18742:12)
 -workLoopSyn (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconcile
             r/cjs/react-reconciler.development.js:18648:5)
 -renderRootSy (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconcil
  c           er/cjs/react-reconciler.development.js:18616:7)
 -performSyncWorkOn (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-rec
  oot              onciler/cjs/react-reconciler.development.js:18232:20)
 -flushSyncCallba (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-recon
  ks             ciler/cjs/react-reconciler.development.js:2936:22)
"
`;

exports[`GamePlayView > スナップショット - ゲームプレイ画面 1`] = `
"
  ERROR  Cannot read properties of undefined (reading 'vitality')

 src/app/components/GamePlayView.tsx:609:71

 606:           {/* 現在のステータス */}
 607:           <Box marginTop={1}>
 608:             <Text color="green">⚔ 基礎ダメージ: {playerStats.baseDamage}</Text>
 609:             <Text color="cyan">🛡 VIT: {session.player.baseAttributes.vitality}</Text>
 610:             <Text color="red">❤️  体力: {playerStats.maxHealth}</Text>
 611:             <Text color="blue">🔮 魔力: {playerStats.maxMana}</Text>
 612:           </Box>

 - GamePlayView (src/app/components/GamePlayView.tsx:609:71)
 -renderWithHoo (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconci
  s            ler/cjs/react-reconciler.development.js:6659:18)
 -mountIndeterminateCom (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react
  onent                -reconciler/cjs/react-reconciler.development.js:11276:13)
 -beginWor (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconciler/c
          js/react-reconciler.development.js:12799:16)
 -beginWork$ (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconciler
            /cjs/react-reconciler.development.js:19608:14)
 -performUnitOfW (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconc
  rk            iler/cjs/react-reconciler.development.js:18742:12)
 -workLoopSyn (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconcile
             r/cjs/react-reconciler.development.js:18648:5)
 -renderRootSy (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-reconcil
  c           er/cjs/react-reconciler.development.js:18616:7)
 -performSyncWorkOn (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-rec
  oot              onciler/cjs/react-reconciler.development.js:18232:20)
 -flushSyncCallba (node_modules/.pnpm/react-reconciler@0.29.2_react@18.3.1/node_modules/react-recon
  ks             ciler/cjs/react-reconciler.development.js:2936:22)
"
`;
